[gd_scene load_steps=24 format=3 uid="uid://btc1iel6mbh5l"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_becjd"]
[ext_resource type="Texture2D" uid="uid://bv4vgq6d0sryw" path="res://Assets/Player.png" id="2_p1oh4"]
[ext_resource type="Script" path="res://Assets/States/idle_state.gd" id="3_od85q"]
[ext_resource type="Script" path="res://Assets/States/move_state.gd" id="4_40ibk"]
[ext_resource type="Script" path="res://Assets/States/jump_state.gd" id="5_84vs8"]
[ext_resource type="Script" path="res://Assets/States/fall_state.gd" id="6_gpoqi"]
[ext_resource type="Script" path="res://Assets/States/dash_state.gd" id="7_pmo78"]
[ext_resource type="Texture2D" uid="uid://i5rryx2rmx47" path="res://Assets/Weapons and Items.png" id="8_i1bme"]
[ext_resource type="Texture2D" uid="uid://boqoa7luxgf5v" path="res://Assets/ExplosionParticles.png" id="9_0rx3c"]
[ext_resource type="AudioStream" uid="uid://dx36qpuvoi6jq" path="res://Audio/SFX_Shoot.ogg" id="10_tsrwn"]
[ext_resource type="AudioStream" uid="uid://blfl6fncb2onv" path="res://Audio/SFX_Reload.ogg" id="11_r6oo0"]
[ext_resource type="AudioStream" uid="uid://iogkbbhsvea5" path="res://Audio/SFX_Jump.ogg" id="12_uh825"]
[ext_resource type="AudioStream" uid="uid://b1b3nx6yfki5p" path="res://Audio/SFX_Dash.ogg" id="13_2dxqg"]
[ext_resource type="AudioStream" uid="uid://cfo4y0ds2j4fk" path="res://Audio/SFX_EmptyMag.ogg" id="14_wyw00"]
[ext_resource type="AudioStream" uid="uid://dktxipi5i72gm" path="res://Audio/SFX_PlayerGore.ogg" id="15_vy3ne"]
[ext_resource type="AudioStream" uid="uid://docxk70hhuvs" path="res://Audio/SFX_PlayerTakeDamage.ogg" id="16_3uwsp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jp4d0"]
atlas = ExtResource("2_p1oh4")
region = Rect2(0, 0, 419, 417)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl8ie"]
atlas = ExtResource("2_p1oh4")
region = Rect2(838, 0, 419, 417)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wjug"]
atlas = ExtResource("2_p1oh4")
region = Rect2(419, 0, 419, 417)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6yxa"]
atlas = ExtResource("2_p1oh4")
region = Rect2(419, 417, 419, 417)

[sub_resource type="SpriteFrames" id="SpriteFrames_3drr1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp4d0")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl8ie")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wjug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6yxa")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_odpbn"]
radius = 123.0
height = 345.0

[sub_resource type="Curve" id="Curve_jq0ns"]
max_value = 2.0
_data = [Vector2(0, 0.725275), 0.0, 0.0, 0, 0, Vector2(0.494382, 1.23077), 0.0, 0.0, 0, 0, Vector2(1, 0.571429), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(0.4, 0.4)
collision_layer = 2
collision_mask = 21
script = ExtResource("1_becjd")

[node name="BloodParticles" type="CPUParticles2D" parent="."]
z_index = 10
scale = Vector2(2, 2)
emitting = false
amount = 80
lifetime = 2.0
one_shot = true
speed_scale = 2.5
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 25.0
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 64)
initial_velocity_max = 150.0
radial_accel_max = 30.0
scale_amount_max = 5.0
color = Color(0.693131, 0.0405228, 9.62615e-08, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_3drr1")
animation = &"Move"
frame_progress = 0.162931

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_odpbn")

[node name="States" type="Node" parent="."]

[node name="idle_state" type="Node" parent="States"]
script = ExtResource("3_od85q")

[node name="move_state" type="Node" parent="States"]
script = ExtResource("4_40ibk")

[node name="jump_state" type="Node" parent="States"]
script = ExtResource("5_84vs8")

[node name="fall_state" type="Node" parent="States"]
script = ExtResource("6_gpoqi")

[node name="dash_state" type="Node" parent="States"]
script = ExtResource("7_pmo78")

[node name="GunPistol" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(127.5, -37.5)
scale = Vector2(1.425, 1.425)
texture = ExtResource("8_i1bme")
region_enabled = true
region_rect = Rect2(29.6663, 402.795, 81.106, 58.2225)

[node name="PistolBulletSpawn" type="Marker2D" parent="GunPistol"]
position = Vector2(54.7009, -8.54701)

[node name="CPUParticles2D" type="CPUParticles2D" parent="GunPistol/PistolBulletSpawn"]
emitting = false
lifetime = 0.05
one_shot = true
speed_scale = 0.25
explosiveness = 1.0
randomness = 1.0
texture = ExtResource("9_0rx3c")
spread = 67.27
initial_velocity_max = 282.83
scale_amount_min = 0.0
scale_amount_max = 0.01
scale_amount_curve = SubResource("Curve_jq0ns")

[node name="GunAssaultRifle" type="Sprite2D" parent="."]
visible = false
z_index = 5
position = Vector2(50, 15)
scale = Vector2(2.925, 2.925)
texture = ExtResource("8_i1bme")
region_enabled = true
region_rect = Rect2(271.141, 224.001, 111.114, 50.4676)

[node name="AssaultBulletSpawn" type="Marker2D" parent="GunAssaultRifle"]
position = Vector2(54.7009, -8.54701)

[node name="CPUParticles2D" type="CPUParticles2D" parent="GunAssaultRifle/AssaultBulletSpawn"]
emitting = false
lifetime = 0.05
one_shot = true
speed_scale = 0.25
explosiveness = 1.0
randomness = 1.0
texture = ExtResource("9_0rx3c")
spread = 67.27
initial_velocity_max = 282.83
scale_amount_min = 0.0
scale_amount_max = 0.01
scale_amount_curve = SubResource("Curve_jq0ns")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -200)
position_smoothing_enabled = true
position_smoothing_speed = 12.0

[node name="HealTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="SFX_Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_tsrwn")
bus = &"SFX"

[node name="SFX_Reload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_r6oo0")
volume_db = 8.0
bus = &"SFX"

[node name="SFX_Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_uh825")
bus = &"SFX"

[node name="SFX_Dash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_2dxqg")
volume_db = 6.0
bus = &"SFX"

[node name="SFX_NoAmmo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_wyw00")
bus = &"SFX"

[node name="SFX_Gore" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_vy3ne")
bus = &"SFX"

[node name="SFX_TakeDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_3uwsp")
volume_db = -6.0
bus = &"Interface"

[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
